Revert "fix findings, set up release job"
This reverts commit 73653c6e2ec6697a34d4d4d3d7e1fb1b6351c97f.