@@ -50,7 +50,7 @@ public final class GroupPlacementRequest {
   }
 
   private static void requireText(String value, String field) {
-    if (value == null || value.isBlank()) {
+    if (value == null || value.trim().isEmpty()) {
       throw new IllegalArgumentException(field + " must not be null or blank");
     }
   }
